--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1684,7 +1684,11 @@ textarea.form-input::-webkit-resizer { display: none; }
    * MAIN 
    */
 
-  main { margin-bottom: 60px; }
+  main { 
+    margin-bottom: 60px; 
+    position: relative;
+    z-index: 99;
+  }
 
   .main-content {
     position: relative;
@@ -1815,6 +1819,7 @@ textarea.form-input::-webkit-resizer { display: none; }
     min-width: 75%;
     width: 75%;
     margin: 0;
+    z-index: 99;
   }
 
 
@@ -1879,4 +1884,13 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .timeline-text { max-width: 700px; }
 
+}
+/* Particles */
+
+#particles-js{
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    z-index: -1;/* Color de fondo del div */
+  
 }
