--- a/jinja/index.jinja
+++ b/jinja/index.jinja
@@ -47,7 +47,9 @@
 </head>
 
 <body>
+  <div id="particles-js">
 
+  </div>
   <!--
     - #MAIN
   -->
@@ -122,7 +124,20 @@
   -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  <script src="./assets/js/particles.min.js"></script>
+  <script src="//code.tidio.co/5vsso4jjazusm0zivgf62qaglsqqndj3.js" async></script>
+  <script src="./assets/js/particlesjs-config.js"></script>
+  
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WR7EZ4XMPP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-WR7EZ4XMPP');
+</script>
+  
 </body>
 
 </html>
